--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "chart.js": "^4.5.0",
     "clsx": "2.1.1",
     "dayjs": "1.11.11",
+    "firebase": "^12.2.1",
+    "firebase-admin": "^13.5.0",
     "framer-motion": "11.0.23",
     "immer": "^10.1.3",
     "leaflet": "1.9.4",
