--- a/package.json
+++ b/package.json
@@ -1,46 +1,51 @@
 {
-  "name": "mentor-ana-pwa-v13",
-  "version": "1.0.0",
+  "name": "aplicatieana2",
   "private": true,
+  "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "build": "tsc && vite build",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview",
+    "import-data": "npx tsc --project scripts/tsconfig.json && node scripts/importData.js"
   },
   "dependencies": {
-    "chart.js": "^4.5.0",
-    "clsx": "2.1.1",
-    "dayjs": "1.11.11",
-    "firebase": "^12.2.1",
-    "firebase-admin": "^13.5.0",
-    "framer-motion": "11.0.23",
-    "immer": "^10.1.3",
-    "leaflet": "1.9.4",
-    "lucide-react": "0.447.0",
-    "react": "18.2.0",
-    "react-chartjs-2": "^5.3.0",
-    "react-confetti": "^6.4.0",
-    "react-dom": "18.2.0",
-    "react-google-charts": "^5.2.1",
-    "react-leaflet": "4.2.1",
-    "react-loading-skeleton": "^3.5.0",
-    "react-router-dom": "6.26.1",
-    "react-use": "^17.6.0",
-    "use-sound": "^5.0.0",
-    "zod": "3.23.8",
-    "zustand": "^4.5.2"
+    "@google/generative-ai": "^0.2.1",
+    "framer-motion": "^11.0.8",
+    "leaflet": "^1.9.4",
+    "localforage": "^1.10.0",
+    "lucide-react": "^0.334.0",
+    "match-sorter": "^6.3.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
+    "react-loading-skeleton": "^3.4.0",
+    "react-markdown": "^9.0.1",
+    "react-router-dom": "^6.22.1",
+    "react-simple-charts": "^1.0.2",
+    "sort-by": "^1.2.0",
+    "zustand": "^4.5.1"
   },
   "devDependencies": {
-    "@netlify/functions": "2.6.0",
-    "@types/react": "18.2.79",
-    "@types/react-dom": "18.2.25",
-    "@vitejs/plugin-react": "4.2.1",
-    "autoprefixer": "10.4.20",
-    "postcss": "8.4.40",
-    "tailwindcss": "3.4.7",
-    "typescript": "5.3.3",
-    "vite": "5.3.4",
-    "vite-plugin-pwa": "0.20.0"
+    "@types/leaflet": "^1.9.8",
+    "@types/react": "^18.2.56",
+    "@types/react-dom": "^18.2.19",
+    "@typescript-eslint/eslint-plugin": "^7.0.2",
+    "@typescript-eslint/parser": "^7.0.2",
+    "@vite-pwa/assets-generator": "^0.2.4",
+    "@vitejs/plugin-react-swc": "^3.5.0",
+    "autoprefixer": "^10.4.17",
+    "daisyui": "^4.7.2",
+    "eslint": "^8.56.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.5",
+    "firebase-admin": "^12.0.0",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.2.2",
+    "vite": "^5.1.4",
+    "vite-plugin-pwa": "^0.19.0"
   }
 }
