--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "import-data": "npx tsc --project scripts/tsconfig.json && node scripts/importData.js"
+    "import-data": "npx ts-node --esm --experimental-specifier-resolution=node ./scripts/importData.ts"
   },
   "dependencies": {
     "@google/generative-ai": "^0.2.1",
