--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "import-data": "npx ts-node --esm --experimental-specifier-resolution=node ./scripts/importData.ts"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@google/generative-ai": "^0.2.1",
+    "firebase": "^10.12.2",
     "framer-motion": "^11.0.8",
     "leaflet": "^1.9.4",
     "localforage": "^1.10.0",
@@ -23,7 +23,6 @@
     "react-loading-skeleton": "^3.4.0",
     "react-markdown": "^9.0.1",
     "react-router-dom": "^6.22.1",
-    "react-simple-charts": "^1.0.2",
     "sort-by": "^1.2.0",
     "zustand": "^4.5.1"
   },
@@ -40,10 +39,8 @@
     "eslint": "^8.56.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
-    "firebase-admin": "^12.0.0",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
-    "ts-node": "^10.9.2",
     "typescript": "^5.2.2",
     "vite": "^5.1.4",
     "vite-plugin-pwa": "^0.19.0"
