--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "zustand": "^4.5.1"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.16",
     "@types/leaflet": "^1.9.8",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
