--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@google/generative-ai": "^0.2.1",
     "firebase": "^10.12.2",
-    "framer-motion": "^11.0.8",
+    "framer-motion": "^11.18.2",
     "leaflet": "^1.9.4",
     "localforage": "^1.10.0",
     "lucide-react": "^0.334.0",
@@ -23,6 +23,7 @@
     "react-loading-skeleton": "^3.4.0",
     "react-markdown": "^9.0.1",
     "react-router-dom": "^6.22.1",
+    "recharts": "^3.2.0",
     "sort-by": "^1.2.0",
     "zustand": "^4.5.1"
   },
