--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "framer-motion": "^11.18.2",
     "leaflet": "^1.9.4",
     "localforage": "^1.10.0",
+    "lottie-web": "^5.13.0",
     "lucide-react": "^0.334.0",
     "match-sorter": "^6.3.4",
     "react": "^18.2.0",
