--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
     "zustand": "^4.5.1"
   },
   "devDependencies": {
+    "@capacitor/android": "^7.4.3",
+    "@capacitor/cli": "^7.4.3",
+    "@capacitor/core": "^7.4.3",
     "@tailwindcss/typography": "^0.5.16",
     "@types/leaflet": "^1.9.8",
     "@types/react": "^18.2.56",
