--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "lottie-web": "^5.13.0",
     "lucide-react": "^0.334.0",
     "match-sorter": "^6.3.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-leaflet": "^4.2.1",
     "react-loading-skeleton": "^3.4.0",
     "react-markdown": "^9.0.1",
@@ -27,6 +27,8 @@
     "recharts": "^3.2.0",
     "sort-by": "^1.2.0",
     "zustand": "^4.5.1"
+    ,
+    "react-hot-toast": "^2.6.0"
   },
   "devDependencies": {
     "@capacitor/android": "^7.4.3",
@@ -46,9 +48,9 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.17",
-    "typescript": "^5.2.2",
-    "vite": "^5.1.4",
+    "tailwindcss": "^3.4.3",
+    "typescript": "^5.4.5",
+    "vite": "^5.2.11",
     "vite-plugin-pwa": "^0.19.8"
   }
 }
