--- a/package.json
+++ b/package.json
@@ -26,9 +26,10 @@
     "react-router-dom": "^6.22.1",
     "recharts": "^3.2.0",
     "sort-by": "^1.2.0",
-    "zustand": "^4.5.1"
-    ,
-    "react-hot-toast": "^2.6.0"
+    "zustand": "^4.5.1",
+    "react-hot-toast": "^2.6.0",
+    "cmdk": "^1.1.1",
+    "firebase-admin": "^12.0.0"
   },
   "devDependencies": {
     "@capacitor/android": "^7.4.3",
